--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <img src="./images/logo.png" />
               <h1>Cart</h1>
             </div>
-            <p>Home &gt; Cart</p>
+            <p>Home &gt; <span class="cartBanner">Cart</span></p>
           </div>
         </section>
         <section class="cart-section">
